# Qt-JSON-RPC-2.0-Server

./: .gitignore  CMakeLists.txt  README.md  account.cpp  account.h  main.cpp  person.cpp  person.h  procedureserver.cpp  procedureserver.h  socketdispatcher.cpp  socketdispatcher.h  test.json
